--- a/res/menu/action_items.xml
+++ b/res/menu/action_items.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/atn_direct_discover"
         android:title="@string/discover_peers_button"
-        android:showAsAction="ifRoom|withText"> <requestFocus /> </item>
+        android:showAsAction="ifRoom|withText"/>
     <item
         android:id="@+id/setting_name"
         android:title="@string/change_name"
