pd#81784 set MainView Activity to FullScreen

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -11,7 +11,11 @@
             backward-compatibility can go here.
         -->
     </style>
-
+    <style name="appCustom" parent="@android:style/Theme.Holo">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
