--- a/res/layout/childgrid_item.xml
+++ b/res/layout/childgrid_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>   
-<com.amlogic.mediaboxlauncher.MyRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
+<com.droidlogic.mboxlauncher.MyRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
     android:layout_width="wrap_content" 
     android:layout_height="wrap_content"
     android:focusable="true"
@@ -25,4 +25,4 @@
     	    android:singleLine="true" >    
     	</TextView> 
   
-</com.amlogic.mediaboxlauncher.MyRelativeLayout> 
+</com.droidlogic.mboxlauncher.MyRelativeLayout> 
