--- a/res/layout/homegrid_item.xml
+++ b/res/layout/homegrid_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>   
-<com.amlogic.mediaboxlauncher.MyRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
+<com.droidlogic.mboxlauncher.MyRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"  
     android:layout_width="97dp" 
     android:layout_height="97dp"
     android:layout_centerHorizontal="true"
@@ -13,4 +13,4 @@
     	    android:padding="18dp">  
     	</ImageView> 
   
-</com.amlogic.mediaboxlauncher.MyRelativeLayout> 
+</com.droidlogic.mboxlauncher.MyRelativeLayout> 
