--- a/res/layout/layout_local.xml
+++ b/res/layout/layout_local.xml
@@ -38,14 +38,14 @@
 		android:textSize="20sp"
 		android:textColor="#3495D9" 
 	/>
-    <com.amlogic.mediaboxlauncher.MyScrollView
+    <com.droidlogic.mboxlauncher.MyScrollView
 	        android:layout_width="976dp"
             android:layout_height="460dp"
             android:layout_marginLeft="170dp"
 	        android:layout_marginTop="116dp" 
 	        android:descendantFocusability="afterDescendants">
 
-	<com.amlogic.mediaboxlauncher.MyGridLayout
+	<com.droidlogic.mboxlauncher.MyGridLayout
 			android:id="@+id/gv_shortcut_local"
 	        android:layout_width="wrap_content" 
 	        android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
 	        android:layout_centerHorizontal="true" 
 	        android:descendantFocusability="afterDescendants"
             />
-    </com.amlogic.mediaboxlauncher.MyScrollView>
+    </com.droidlogic.mboxlauncher.MyScrollView>
     
     <ImageView
         android:contentDescription="@string/img_desc"
