--- a/res/layout/layout_rect_group.xml
+++ b/res/layout/layout_rect_group.xml
@@ -12,7 +12,7 @@
 	    android:layout_centerHorizontal="true" 
 	>
 				
-		<com.amlogic.mediaboxlauncher.MyRelativeLayout
+		<com.droidlogic.mboxlauncher.MyRelativeLayout
 			android:id="@+id/layout_video"
 		    android:layout_width="294dp"
 		    android:layout_height="220dp"
@@ -38,9 +38,9 @@
 		        android:text="@string/str_video"
 		        android:textSize="30dp"
 			/>
-		</com.amlogic.mediaboxlauncher.MyRelativeLayout>
+		</com.droidlogic.mboxlauncher.MyRelativeLayout>
 
-		<com.amlogic.mediaboxlauncher.MyRelativeLayout
+		<com.droidlogic.mboxlauncher.MyRelativeLayout
 			android:id="@+id/layout_recommend"
 		    android:layout_width="378dp"
 		    android:layout_height="220dp"
@@ -66,9 +66,9 @@
 		        android:text="@string/str_recommend"
 		        android:textSize="30dp"
 			/>
-		</com.amlogic.mediaboxlauncher.MyRelativeLayout>
+		</com.droidlogic.mboxlauncher.MyRelativeLayout>
 		
-		<com.amlogic.mediaboxlauncher.MyRelativeLayout
+		<com.droidlogic.mboxlauncher.MyRelativeLayout
 			android:id="@+id/layout_setting"
 		    android:layout_width="297dp"
 			android:layout_height="220dp"
@@ -95,7 +95,7 @@
 		        android:text="@string/str_setting"
 		        android:textSize="30dp"
 			/>		
-		</com.amlogic.mediaboxlauncher.MyRelativeLayout>
+		</com.droidlogic.mboxlauncher.MyRelativeLayout>
 
 	</RelativeLayout>
 
@@ -106,7 +106,7 @@
 	    android:layout_marginTop="276dp"
 	    android:layout_centerHorizontal="true" 
 	>
-		<com.amlogic.mediaboxlauncher.MyRelativeLayout
+		<com.droidlogic.mboxlauncher.MyRelativeLayout
 			android:id="@+id/layout_app"
 		    android:layout_width="424dp"
 		    android:layout_height="220dp"
@@ -132,9 +132,9 @@
 		        android:text="@string/str_app"
 		        android:textSize="30dp"
 			/>
-		</com.amlogic.mediaboxlauncher.MyRelativeLayout>
+		</com.droidlogic.mboxlauncher.MyRelativeLayout>
 		
-		<com.amlogic.mediaboxlauncher.MyRelativeLayout
+		<com.droidlogic.mboxlauncher.MyRelativeLayout
 			android:id="@+id/layout_music"
 		    android:layout_width="247dp"
 		    android:layout_height="220dp"
@@ -160,9 +160,9 @@
 		        android:text="@string/str_music"
 		        android:textSize="30dp"
 			/>
-		</com.amlogic.mediaboxlauncher.MyRelativeLayout>
+		</com.droidlogic.mboxlauncher.MyRelativeLayout>
 		
-		<com.amlogic.mediaboxlauncher.MyRelativeLayout
+		<com.droidlogic.mboxlauncher.MyRelativeLayout
 			android:id="@+id/layout_local"
 		    android:layout_width="297dp"
 		    android:layout_height="220dp"
@@ -188,7 +188,7 @@
 		        android:text="@string/str_local"
 		        android:textSize="30dp"
 			/>		
-		</com.amlogic.mediaboxlauncher.MyRelativeLayout>
+		</com.droidlogic.mboxlauncher.MyRelativeLayout>
 	
 	</RelativeLayout>
 	    
