--- a/res/layout/layout_rect_group.xml
+++ b/res/layout/layout_rect_group.xml
@@ -2,22 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 android:id="@+id/layout_rect_group"
 android:layout_width="match_parent"
-android:layout_height="wrap_content">
-
-<RelativeLayout
-	android:id="@+id/layout_up"
-	android:layout_width="1057dp"
-	android:layout_height="300dp"
-	android:layout_marginTop="56dp"
-	android:layout_centerHorizontal="true"
->
+android:layout_height="match_parent">
 
 	<com.droidlogic.mboxlauncher.MyRelativeLayout
 		android:id="@+id/layout_video"
-		android:layout_width="294dp"
-		android:layout_height="214dp"
-		android:layout_marginTop="40dp"
-		android:layout_marginLeft="40dp"
+		android:layout_width="310dp"
+		android:layout_height="461dp"
+		android:layout_marginTop="87dp"
+		android:layout_marginLeft="120dp"
 		android:focusable="true"
 		android:focusableInTouchMode="true"
 		android:descendantFocusability="beforeDescendants"
@@ -33,19 +25,20 @@ android:layout_height="wrap_content">
 		android:id="@+id/tx_video"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="170dp"
-		android:layout_centerHorizontal="true"
+		android:layout_marginTop="9dp"
+		android:layout_marginLeft="15dp"
 		android:text="@string/str_video"
-		android:textSize="30dp"
+		android:textSize="25dp"
+		android:textColor="@color/btn_text_color"
 	/>
 	</com.droidlogic.mboxlauncher.MyRelativeLayout>
 
 	<com.droidlogic.mboxlauncher.MyRelativeLayout
 		android:id="@+id/layout_recommend"
-		android:layout_width="371dp"
-		android:layout_height="214dp"
-		android:layout_marginTop="40dp"
-		android:layout_marginLeft="337dp"
+		android:layout_width="454dp"
+		android:layout_height="229dp"
+		android:layout_marginTop="87dp"
+		android:layout_marginLeft="434dp"
 		android:focusable="true"
 		android:focusableInTouchMode="true"
 		android:descendantFocusability="beforeDescendants"
@@ -61,84 +54,20 @@ android:layout_height="wrap_content">
 		android:id="@+id/tx_recommend"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="170dp"
-		android:layout_centerHorizontal="true"
+		android:layout_marginTop="9dp"
+		android:layout_marginLeft="15dp"
 		android:text="@string/str_recommend"
-		android:textSize="30dp"
-	/>
-	</com.droidlogic.mboxlauncher.MyRelativeLayout>
-
-	<com.droidlogic.mboxlauncher.MyRelativeLayout
-		android:id="@+id/layout_setting"
-		android:layout_width="290dp"
-		android:layout_height="214dp"
-		android:layout_marginTop="40dp"
-		android:layout_marginLeft="714dp"
-		android:focusable="true"
-		android:focusableInTouchMode="true"
-		android:descendantFocusability="beforeDescendants"
-	>
-	<ImageView
-		android:id="@+id/img_setting"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:src="@drawable/img_setting"
-		android:layout_centerInParent="true"
-	/>
-	<TextView
-		android:id="@+id/tx_setting"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="170dp"
-		android:layout_centerHorizontal="true"
-		android:text="@string/str_setting"
-		android:textSize="30dp"
-	/>
-	</com.droidlogic.mboxlauncher.MyRelativeLayout>
-
-</RelativeLayout>
-
-
-<RelativeLayout
-	android:layout_width="1057dp"
-	android:layout_height="300dp"
-	android:layout_marginTop="275dp"
-	android:layout_centerHorizontal="true"
->
-	<com.droidlogic.mboxlauncher.MyRelativeLayout
-		android:id="@+id/layout_app"
-		android:layout_width="418dp"
-		android:layout_height="214dp"
-		android:layout_marginTop="40dp"
-		android:layout_marginLeft="40dp"
-		android:focusable="true"
-		android:focusableInTouchMode="true"
-		android:descendantFocusability="beforeDescendants"
-	>
-	<ImageView
-		android:id="@+id/img_app"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:src="@drawable/img_app"
-		android:layout_centerInParent="true"
-	/>
-	<TextView
-		android:id="@+id/tx_app"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_marginTop="170dp"
-		android:layout_centerHorizontal="true"
-		android:text="@string/str_app"
-		android:textSize="30dp"
+		android:textSize="25dp"
+		android:textColor="@color/btn_text_color"
 	/>
 	</com.droidlogic.mboxlauncher.MyRelativeLayout>
 
 	<com.droidlogic.mboxlauncher.MyRelativeLayout
 		android:id="@+id/layout_music"
-		android:layout_width="246dp"
-		android:layout_height="214dp"
-		android:layout_marginTop="40dp"
-		android:layout_marginLeft="463dp"
+		android:layout_width="282dp"
+		android:layout_height="229dp"
+		android:layout_marginTop="87dp"
+		android:layout_marginLeft="892dp"
 		android:focusable="true"
 		android:focusableInTouchMode="true"
 		android:descendantFocusability="beforeDescendants"
@@ -154,19 +83,49 @@ android:layout_height="wrap_content">
 		android:id="@+id/tx_music"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="170dp"
-		android:layout_centerHorizontal="true"
+		android:layout_marginTop="9dp"
+		android:layout_marginLeft="15dp"
 		android:text="@string/str_music"
-		android:textSize="30dp"
+		android:textSize="25dp"
+		android:textColor="@color/btn_text_color"
+	/>
+	</com.droidlogic.mboxlauncher.MyRelativeLayout>
+
+	<com.droidlogic.mboxlauncher.MyRelativeLayout
+		android:id="@+id/layout_app"
+		android:layout_width="282dp"
+		android:layout_height="228dp"
+		android:layout_marginTop="320dp"
+		android:layout_marginLeft="434dp"
+		android:focusable="true"
+		android:focusableInTouchMode="true"
+		android:descendantFocusability="beforeDescendants"
+	>
+	<ImageView
+		android:id="@+id/img_app"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:src="@drawable/img_app"
+		android:layout_centerInParent="true"
+	/>
+	<TextView
+		android:id="@+id/tx_app"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="9dp"
+		android:layout_marginLeft="15dp"
+		android:text="@string/str_app"
+		android:textSize="25dp"
+		android:textColor="@color/btn_text_color"
 	/>
 	</com.droidlogic.mboxlauncher.MyRelativeLayout>
 
 	<com.droidlogic.mboxlauncher.MyRelativeLayout
 		android:id="@+id/layout_local"
-		android:layout_width="290dp"
-		android:layout_height="214dp"
-		android:layout_marginTop="40dp"
-		android:layout_marginLeft="714dp"
+		android:layout_width="227dp"
+		android:layout_height="228dp"
+		android:layout_marginTop="320dp"
+		android:layout_marginLeft="719dp"
 		android:focusable="true"
 		android:focusableInTouchMode="true"
 		android:descendantFocusability="beforeDescendants"
@@ -182,13 +141,41 @@ android:layout_height="wrap_content">
 		android:id="@+id/tx_local"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="170dp"
-		android:layout_centerHorizontal="true"
+		android:layout_marginTop="9dp"
+		android:layout_marginLeft="15dp"
 		android:text="@string/str_local"
-		android:textSize="30dp"
+		android:textSize="25dp"
+		android:textColor="@color/btn_text_color"
 	/>
 	</com.droidlogic.mboxlauncher.MyRelativeLayout>
 
-</RelativeLayout>
+	<com.droidlogic.mboxlauncher.MyRelativeLayout
+		android:id="@+id/layout_setting"
+		android:layout_width="224dp"
+		android:layout_height="228dp"
+		android:layout_marginTop="320dp"
+		android:layout_marginLeft="950dp"
+		android:focusable="true"
+		android:focusableInTouchMode="true"
+		android:descendantFocusability="beforeDescendants"
+	>
+	<ImageView
+		android:id="@+id/img_setting"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:src="@drawable/img_setting"
+		android:layout_centerInParent="true"
+	/>
+	<TextView
+		android:id="@+id/tx_setting"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="9dp"
+		android:layout_marginLeft="15dp"
+		android:text="@string/str_setting"
+		android:textSize="25dp"
+		android:textColor="@color/btn_text_color"
+	/>
+	</com.droidlogic.mboxlauncher.MyRelativeLayout>
 
 </RelativeLayout>
