--- a/res/layout/layout_hover.xml
+++ b/res/layout/layout_hover.xml
@@ -4,12 +4,24 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 >
 <ImageView
-	android:id="@+id/img_hover"
+	android:id="@+id/img_hover_home"
 	android:layout_height="match_parent"
 	android:layout_width="match_parent"
 	android:scaleType="fitCenter"
 	android:layout_centerInParent="true">
 </ImageView>
+
+<ImageView
+	android:id="@+id/img_hover_second"
+	android:layout_height="match_parent"
+	android:layout_width="match_parent"
+    android:paddingTop="0dp"
+    android:paddingLeft="15dp"
+    android:paddingBottom="30dp"
+    android:paddingRight="15dp"
+	android:scaleType="fitCenter">
+</ImageView>
+
 <com.droidlogic.mboxlauncher.MyTextView
 	android:id="@+id/tx_hover_top"
 	android:layout_height="wrap_content"
