Launcher: merge from Android O [1/1]
PD#171673

Change-Id: I8988122b0db68e29156a0ff7934ed547029cea2b
Signed-off-by: Lei Qian <lei.qian@amlogic.com>

--- a/res/layout/main_box.xml
+++ b/res/layout/main_box.xml
@@ -16,7 +16,8 @@
     <FrameLayout
         android:id="@+id/layout_main"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="fill_parent"
+        android:visibility="gone" >
 
         <RelativeLayout
             android:id="@+id/layout_homepage"
@@ -50,6 +51,14 @@
             android:gravity="center"
             android:textSize="30sp"
             android:textStyle="bold" />
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/layout_black"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/black_ground"
+        android:visibility="visible" >
     </FrameLayout>
 
 </RelativeLayout>
