--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,50 +9,59 @@
 -->
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/layout_root"
-android:layout_width="fill_parent"
-android:layout_height="fill_parent">
-	<FrameLayout
-	android:id="@+id/layout_main"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent">
-		<RelativeLayout
-			android:id="@+id/layout_homepage"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:descendantFocusability="afterDescendants">
+    android:id="@+id/layout_root"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
-			<include layout="@layout/layout_statusbar" />
-			<include layout="@layout/layout_rect_group" />
-			<include layout="@layout/layout_shortcut" />
-		</RelativeLayout>
+    <FrameLayout
+        android:id="@+id/layout_main"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:visibility="gone">
 
-		<com.droidlogic.mboxlauncher.AppLayout
-		    android:id="@+id/second_screen"
-	        android:layout_width="match_parent"
-	        android:layout_height="match_parent"
-	        android:descendantFocusability="afterDescendants"
-	        android:visibility="gone"
-		/>
+        <RelativeLayout
+            android:id="@+id/layout_homepage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:descendantFocusability="afterDescendants">
 
-		<com.droidlogic.mboxlauncher.HoverView
-		    android:id="@+id/hover_view"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-		/>
+            <include layout="@layout/layout_statusbar" />
+            <include layout="@layout/layout_rect_group" />
+            <include layout="@layout/layout_shortcut" />
+        </RelativeLayout>
 
-		<android.media.tv.TvView
-			android:id="@+id/tv_view"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-		/>
-		<TextView
-			android:id="@+id/tx_tv_prompt"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:gravity="center"
-			android:textSize="30sp"
-			android:textStyle="bold"
-		/>
-	</FrameLayout>
+        <com.droidlogic.mboxlauncher.AppLayout
+            android:id="@+id/second_screen"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:descendantFocusability="afterDescendants"
+            android:visibility="gone"/>
+
+        <com.droidlogic.mboxlauncher.HoverView
+            android:id="@+id/hover_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <android.media.tv.TvView
+            android:id="@+id/tv_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/tx_tv_prompt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="30sp"
+            android:textStyle="bold"/>
+    </FrameLayout>
+
+    <FrameLayout
+        android:id="@+id/layout_black"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/black_ground"
+        android:visibility="visible">
+    </FrameLayout>
+
 </RelativeLayout>
